fixes site author details

--- a/_config.yml
+++ b/_config.yml
@@ -96,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/ricardocannizzaro"
+  github           : "ricardocannizzaro"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/ricardo-cannizzaro"
+  linkedin         : "ricardo-cannizzaro"
   orcid            : "https://orcid.org/0000-0001-8915-5858"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/RCannizzaro01"
+  twitter          : "RCannizzaro01"
   vine             :
   weibo            :
   xing             :
