removes trailing slash from github url which might be breaking things

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Ricardo Cannizzaro:
   name        : Ricardo Cannizzaro"
-  uri         : "https://ricardocannizzaro.github.io/"
+  uri         : "https://ricardocannizzaro.github.io"
   email       : "ricardo@robots.ox.ac.uk"
   bio         : "DPhil (PhD) student at the Cognitive Robotics Group, Oxford Robotics Institute, University of Oxford | Defence Research Scientist (Robotics Specialist) at Australia Defence Science and Technology Group."
   avatar      : "profile.jpg"
