--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Ricardo Cannizzaro"
 title_separator          : "-"
 name                     : &name "Ricardo Cannizzaro"
 description              : &description "DPhil (PhD) student at the Cognitive Robotics Group, Oxford Robotics Institute, University of Oxford"
-url                      : https://ricardocannizzaro.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://ricardocannizzaro.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ricardocannizzaro/ricardocannizzaro.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
