--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ricardo Cannizzaro (He/Him)"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "DPhil (PhD) student at the Cognitive Robotics Group, Oxford Robotics Institute, University of Oxford | Defence Research Scientist (Robotics Specialist) at Australia Defence Science and Technology Group"
   location         : "Oxford, UK"
   employer         : "Australian Department of Defence"
